Data parse fixed