@@ -11,40 +11,117 @@ import com.example.demo.repository.ClientRepository;
 import com.example.demo.repository.SubscriptionRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.ErrorResponseException;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static java.time.LocalDateTime.now;
+
+
 @Service
+@RequiredArgsConstructor
 public class SubscriptionService {
-    @Autowired
-    private SubscriptionRepository subscriptionRepository;
+
+
+    private final SubscriptionRepository subscriptionRepository;
+
+
+    private final ClientRepository clientRepository;
 
     @Transactional
-    public List<Subscription> addSubscription(List<Subscription> subscriptions){
+    public List<Subscription> addSubscriptions(List<Subscription> subscriptions){
 
         List<SubscriptionDTO> subscriptionDTO = subscriptions
                 .stream()
-                .map(SubscriptionMapper.INSTANCE::subscriptionToSubscriptionDTO)
-                .collect(Collectors.toList());
+                .map(sub -> {
+                    if (sub.getClientID() == null)  {
+                        throw new EntityNotFoundException("Please insert the client ");
+                    }
+                    ClientDTO clientDTO = clientRepository.findById(sub.getClientID()).orElseThrow();
+                    SubscriptionDTO subDTO = SubscriptionMapper.INSTANCE.subscriptionToSubscriptionDTO(sub);
+                    subDTO.setClientID(clientDTO);
 
-        List<SubscriptionDTO> saved = subscriptionRepository.saveAll(subscriptionDTO);
+                    return subscriptionRepository.save(subDTO);
+                })
+                .toList();
 
-        return saved.stream().map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription).collect(Collectors.toList());
+
+        return subscriptionDTO.stream().map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription).toList();
+
+    }
+
+    public List<Subscription> getAllSubscriptionExpiring() {
+
+        LocalDate today = LocalDate.now();
+        LocalDate tenDate = today.plusDays(10);
+
+        return subscriptionRepository
+                .findAll()
+                .stream()
+                .filter(subscriptionDTO -> {
+                    LocalDate exSub = subscriptionDTO.getEndDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+                    return exSub.isAfter(today) && exSub.isBefore(tenDate);
+                })
+
+                .map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription)
+                .toList();
+
+    }
+    public Subscription addSubscription(Subscription subscription) {
+
+        if (subscription.getClientID() == null)  {
+            throw new EntityNotFoundException("Please insert the client ");
+        }
+
+        ClientDTO clientDTO = clientRepository.findById(subscription.getClientID()).orElseThrow();
+        SubscriptionDTO subscriptionDTO = SubscriptionMapper.INSTANCE.subscriptionToSubscriptionDTO(subscription);
+        subscriptionDTO.setClientID(clientDTO);
+        SubscriptionDTO saved = subscriptionRepository.save(subscriptionDTO);
+
+        return SubscriptionMapper.INSTANCE.subscriptionDTOToSubscription(saved);
     }
 
     @Transactional
     public List<Subscription> getAllSubscription() {
-        List<Subscription> debug_list = subscriptionRepository.findAll().stream().map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription).toList();
-        System.out.println(debug_list);
-        return debug_list;
+        List<Subscription> subList = subscriptionRepository.findAll().stream().map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription).toList();
+        System.out.println(subList);
+        return subList;
     }
+
+
+
+
+    public List<Subscription> getAllSubscriptionAlreadyExpired() {
+
+        LocalDate today = LocalDate.now();
+
+
+        return subscriptionRepository
+                .findAll()
+                .stream()
+                .filter(subscriptionDTO -> {
+                    LocalDate exSub = subscriptionDTO.getEndDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+                    return exSub.isBefore(today);
+                })
+
+                .map(SubscriptionMapper.INSTANCE::subscriptionDTOToSubscription)
+                .toList();
+    }
+
+
+
 
 
     @Transactional
